--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Web site created using create-react-app"/>
     
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link rel="icon" href="https://png.pngtree.com/element_our/png/20180918/beautiful-sunflower-material-design-png_100731.png"/>
   
@@ -16,3 +17,5 @@
     <div id="root"></div>
   </body>
 </html>
+
+
