--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <!-- <link rel="icon" href="https://png.pngtree.com/element_our/png/20180918/beautiful-sunflower-material-design-png_100731.png"/> -->
+    <link rel="icon" href="https://png.pngtree.com/element_our/png/20180918/beautiful-sunflower-material-design-png_100731.png"/>
   
     <title> Health by KB </title>
   </head>
