--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Web site created using create-react-app"/>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
     
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <link rel="icon" href="https://png.pngtree.com/element_our/png/20180918/beautiful-sunflower-material-design-png_100731.png"/>
+    <!-- <link rel="icon" href="https://png.pngtree.com/element_our/png/20180918/beautiful-sunflower-material-design-png_100731.png"/> -->
   
     <title> Health by KB </title>
   </head>
